# orc

./: .gitignore  .gitlab-ci.yml  CONTRIBUTING.md  RELEASE  meson.build  meson_options.txt
doc/: building.md  concepts.md  hotdoc.json  index.md  meson.build  opcodes.md.in  overview.md  running.md  sitemap.txt  tutorial.md
orc/: meson.build  orc.c  orcarm.c  orcarm.h  orcarm64insn.c  orcarm64insn.h  orcarminsn.c  orcarminsn.h  orcavx-internal.h  orcavxinsn.c  orcavxinsn.h  orccompiler.c  orccompiler.h  orccpu-arm.c  orccpu-powerpc.c  orcexecutor.c  orclimits.h  orcmmx-private.h  orcmmxinsn.c  orcmmxinsn.h  orcneon-private.h  orcneon.h  orcprogram-arm.c  orcprogram-avx.c  orcprogram-c.c  orcprogram-c64x-c.c  orcprogram-mips.c  orcprogram-mmx.c  orcprogram-neon.c  orcprogram-neon32.c  orcprogram-neon64.c  orcprogram-sse.c  orcprogram-x86.c  orcrules-arm.c  orcrules-avx.c  orcrules-neon.c  orcrules-neon32.c  orcrules-neon64.c  orcsse-private.h  orcsseinsn.c  (+11 more)
orc-test/: orctest.c
orc/avx512/: meson.build  orcavx512-private.h  orcavx512.c  orcavx512.h  orcavx512compiler.c  orcavx512insn.c  orcavx512insn.h  orcavx512rules.c  orcavx512target.c
orc/loongarch/: orclasxcompiler.c  orclasxinsn.c  orclasxrules.c  orclasxtarget.c  orcloongarch.c  orcloongarchcompiler.c  orclsxcompiler.c  orclsxinsn.c  orclsxrules.c  orclsxtarget.c
orc/riscv/: orcriscvtarget.c
testsuite/: cmp_opcodes_sys.c  cmp_parse.c  common.c  common.h  meson.build  test.orc
tools/: generate_md_coverage_table.c  generate_md_opcodes_table.c  meson.build
